--- a/src/app/admin-vendor/admin-vendor.component.html
+++ b/src/app/admin-vendor/admin-vendor.component.html
@@ -1,26 +1,56 @@
-<body>
-  <div class="main-container">
-    <div class="background">
-      <span class="administrator">Administrator</span><span class="dashboard">Dashboard</span>
-      <button class="button"></button>
-      <span class="vendors">Users</span>
-      <span class="payments">Payments</span><span class="users-1">Vendors</span>
-      <div class="logout"></div>
-      <i class="fa fa-sign-out" aria-hidden="true"></i>
-      <div class="sign-out">Sign Out
+<div class="main-container">
+  <div class="background">
+    <span class="administrator">Administrator</span><span class="dashboard">Dashboard</span>
+    <button class="button"></button>
+    <span class="vendors">Users</span>
+    <span class="payments">Payments</span>
+    <span class="users-1">Vendors</span>
+    <div class="sign-out">Sign Out</div>
+
+    <div class="flex-column-f">
+      <span class="active-users">Active Users</span>
+      <span class="completed-trips">Requests</span>
+      <span class="demo">(4)</span>
+      <div class="rectangle-3">
+        <span class="company">Company</span>
+        <span class="services">Services</span>
+        <span class="contact">Contact </span><span class="email">Email</span>
       </div>
 
-      <div class="flex-column-f">
-        <span class="active-users">Active Users</span>
-
-
-
-        <span class="completed-trips">Completed Trips</span>
-        <div class="rectangle-3"></div>
-          <div class="rectangle-4"></div>
-          <div class="rectangle-5"></div>
-          <div class="rectangle-6"></div>
-        
+      <div class="rectangle-4">
+        <span class="abccc">Abccc</span>
+        <span class="abc-email">abc@gmail.com</span>
+        <span class="phone-number">898374937</span>
+        <span class="cruise-services">Cruise Services</span>
       </div>
-    </div>
-  </div>
+      <div class="rectangle-5">
+        <span class="djf-email">djf@gmail.com</span>
+        <span class="insurance-service">Insurance Service</span>
+        <span class="tydu">Tydu</span><span class="text-d">849578633</span>
+      </div>
+      <div class="rectangle-6">
+        <span class="ujnd">Ujnd</span><span class="hfy-email">hfy@gmail.com</span><span
+          class="travel-planning-services">Travel Planning Services</span><span class="phone-number-5">7389479308</span>
+      </div>
+      <div class="rectangle-7"> <span class="company-name">Company Name</span><span class="contact1">Contact</span><span
+          class="name">Name</span>
+      </div>
+      <div class="rectangle-8"><span class="company-1">Uuu Company</span>
+        <span class="contact2">34567890</span><span class="name1">Abc</span>
+        <a href="https://getbootstrap.com/"><button type="button" class="btn btn-primary">View</button> </a>
+        <a href="https://getbootstrap.com/"><button type="button" class="btn btn-success">Accept</button></a>
+        <a href="https://getbootstrap.com/"><button type="button" class="btn btn-danger">Decline</button></a>
+      </div>
+      <div class="rectangle-9"><span class="company-2">Yyy Company</span>
+        <span class="contact3">34567894</span><span class="name2">Xyz</span>
+        <a href="https://getbootstrap.com/"> <button type="button" class="btn btn-primary">View</button></a>
+        <a href="https://getbootstrap.com/"><button type="button" class="btn btn-success">Accept</button></a>
+        <a href="https://getbootstrap.com/"> <button type="button" class="btn btn-danger">Decline</button></a>
+      </div>
+
+      <div class="rectangle-10"><span class="company-3">Ttt Company</span>
+        <span class="contact4">09876543</span><span class="name3">Aaa</span>
+        <a href="https://getbootstrap.com/"> <button type="button" class="btn btn-primary">View</button></a>
+        <a href="https://getbootstrap.com/"> <button type="button" class="btn btn-success">Accept</button></a>
+        <a href="https://getbootstrap.com/"> <button type="button" class="btn btn-danger">Decline</button></a>
+      </div>
