--- a/src/app/admin-vendor/admin-vendor.component.scss
+++ b/src/app/admin-vendor/admin-vendor.component.scss
@@ -15,7 +15,22 @@ textarea,
 button {
   outline: 0;
 }
-
+.demo{
+  display: block;
+  position: relative;
+  height: 50px;
+  top: -50px;
+  margin-left: -100px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: right;
+  white-space: nowrap;
+  z-index: 16;
+  margin-right: 60px;
+}
 .main-container {
   position: relative;
   width: 1920px;
@@ -42,8 +57,8 @@ button {
   margin: 61px 0 0 75px;
   color: #151d48;
   font-family: Poppins, var(--default-font-family);
-  font-size: 30px;
-  font-weight: 600;
+  font-size: 35px;
+  font-weight: bold;
   line-height: 45px;
   text-align: left;
   white-space: nowrap;
@@ -60,7 +75,7 @@ button {
   color: #737791;
   font-family: Poppins, var(--default-font-family);
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 27px;
   text-align: center;
   white-space: nowrap;
@@ -74,7 +89,7 @@ button {
   color: #737791;
   font-family: Poppins, var(--default-font-family);
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 27px;
   text-align: left;
   white-space: nowrap;
@@ -88,7 +103,7 @@ button {
   color: #737791;
   font-family: Poppins, var(--default-font-family);
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 27px;
   text-align: left;
   white-space: nowrap;
@@ -141,7 +156,7 @@ button {
   color: #737791;
   font-family: Poppins, var(--default-font-family);
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 27px;
   text-align: left;
   white-space: nowrap;
@@ -213,16 +228,7 @@ button {
   white-space: nowrap;
   z-index: 47;
 }
-.rectangle-3 {
-  position: absolute;
-  width: 1491px;
-  height: 95px;
-  top: 77px;
-  left: 2px;
-  background: #ffffff;
-  z-index: 17;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-}
+
 .destination {
   display: flex;
   align-items: flex-start;
@@ -246,11 +252,21 @@ button {
   padding-top: 30px;
   color: #000000;
 }
+.rectangle-3 {
+  position: absolute;
+  width: 1491px;
+  height: 95px;
+  top: 100px;
+  left: 2px;
+  background: #ffffff;
+  z-index: 17;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
 .rectangle-4{
   position: absolute;
   width: 1491px;
   height: 95px;
-  top: 190px;
+  top: 200px;
   left: 2px;
   background: #ffffff;
   z-index: 17;
@@ -270,9 +286,578 @@ button {
   position: absolute;
   width: 1491px;
   height: 95px;
-  top: 410px;
+  top: 400px;
   left: 2px;
   background: #ffffff;
   z-index: 17;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.rectangle-7{
+  position: absolute;
+  width: 1491px;
+  height: 95px;
+  top: 650px;
+  left: 2px;
+  background: #ffffff;
+  z-index: 17;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.rectangle-8{
+
+  position: absolute;
+  width: 1491px;
+  height: 95px;
+  top: 750px;
+  left: 2px;
+  background: #ffffff;
+  z-index: 17;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+
+}
+.rectangle-9{
+  position: absolute;
+  width: 1491px;
+  height: 95px;
+  top: 850px;
+  left: 2px;
+  background: #ffffff;
+  z-index: 17;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.rectangle-10{
+  position: absolute;
+  width: 1491px;
+  height: 95px;
+  top: 950px;
+  left: 2px;
+  background: #ffffff;
+  z-index: 17;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.company{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 17px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 6;
+}
+.services{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 1189px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 9;
+}
+.contact{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 443px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 7;
+
+}
+.email{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 846px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 8;
+
+}
+.abccc{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 44px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10;
+
+}
+.abc-email{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 811px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 20;
+
+}
+.phone-number{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 441px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 12;
+
+}
+.cruise-services{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 1191px;
+  color: #0e55c0;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 14;
+}
+.djf-email{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 811px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 22;
+}
+.insurance-service {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 1191px;
+  color: #0e55c0;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 15;
+}
+.tydu {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 44px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 18;
+}
+.text-d {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 441px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 11;
+}
+.ujnd
+{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+ left: 50px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 19;
+}
+.hfy-email {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 811px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 21;
+}
+.travel-planning-services {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 1150px;
+  color: #0e55c0;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 17;
+}
+.phone-number-5 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  left: 441px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 13;
+}
+.company-name
+{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 206px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 8;
+}
+.contact1
+{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 563px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 9;
+}
+.name
+{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 50px;
+  top: 18px;
+  left: 41px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 50px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 7;
+}
+.phonenumber{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 714px;
+  left: 569px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 17;
+
+}
+.company-1{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 250px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10; 
+}
+.company-2{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 250px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10; 
+}
+.company-3
+{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 250px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10;  
+}
+.name1{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 60px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10;   
+}
+.name2{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 60px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10;  
+}
+.name3{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 60px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10;  
+}
+.contact2{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 570px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10; 
+}
+.contact3{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 570px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10; 
+}
+.contact4{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: absolute;
+  height: 34px;
+  top: 30px;
+  margin-left: 570px;
+  color: #000000;
+  font-family: Poppins, var(--default-font-family);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 10; 
+}
+.btn-primary{
+  margin-left: 823px;
+  margin-top: 18px;
+  height: 52px;
+  width: 134px;
+  font-weight: bold;
+  
+}
+.btn-success{
+  margin-left: 100px;
+  margin-top: 18px;
+  height: 52px;
+  width: 134px;
+  font-weight: bold;
+}
+.btn-danger{
+  margin-left: 100px;
+  margin-top: 18px;
+  height: 52px;
+  width: 134px;
+  font-weight: bold;
 }
